2019-04-23  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* quasirandom.tcl: New package - generate quasi-random numbers (for instance for estimating multidimensional integrals)
	* quasirandom.test: Tests for the new package
	* quasirandom.man: Documentation for the new package
	* pkgIndex.tcl: Add the new package

2019-04-18  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* misc.tcl: Add double() to calculation of mean and standard deviation in proc stats (ticket 0a030f850d4e3fc05da98aa954a6ec1b16e655d9)
	* math.test: Correct the outcome of the test for stats (consequence of ticket 0a030f850d4e3fc05da98aa954a6ec1b16e655d9)

2018-08-04  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Source stat_wasserstein.tcl and stat_logit.tcl - for new commands
	* statistics.test: Add corresponding tests
	* statistics.man: Add description of these commands
	* pkgIndex.tcl: Bump the version to 1.3.0

2018-07-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* trig.tcl: Implementation of (additional) trigonometric functions - package math::trig
	* trig.test: Trst for the (additional) trigonometric functions
	* trig.man: Documentation for the (additional) trigonometric functions
	* pkgIndex.tcl: Add the new package

2018-07-19  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* math_geometry.man: Describe the new criterium

2018-06-23  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry_circle.tcl: Use the mean radius as criterium for touching circles (suggestion Andreas Kupries)

2018-06-18  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry_circle.tcl: New source file with circle procedures
	* geometry.tcl: Added [source] statement for the new file, bumped version to 1.3.0
	* math_geometry.man: Description of the new procedures
	* geometry.test: Tests for the new procefures
	* pkgIndex.tcl: Version of math::geometry

2018-01-26  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* pdf_stat.tcl: Add a new procedure, bootstrap